Mong là lần cuối push

--- a/yumshare-client/src/app/pages/home/home.component.scss
+++ b/yumshare-client/src/app/pages/home/home.component.scss
@@ -324,7 +324,7 @@
 
   // Tablet (767px)
   @media screen and (min-width: 426px) and (max-width: 767px) {
-    padding: 1.5rem;
+    // padding: 1.5rem;
 
     .image-title {
       height: 200px;
@@ -354,7 +354,7 @@
 
   // Laptop (1024px)
   @media screen and (min-width: 768px) and (max-width: 1024px) {
-    padding: 1.5rem 2rem;
+    // padding: 1.5rem 2rem;
 
     .image-title {
       height: 220px;
@@ -379,7 +379,7 @@
 
   // Laptop L (1440px)
   @media screen and (min-width: 1025px) and (max-width: 1440px) {
-    padding: 1.5rem 2.5rem;
+    // padding: 1.5rem 2.5rem;
 
     .image-title {
       height: 240px;
