--- a/yumshare-client/src/app/pages/message/message.component.scss
+++ b/yumshare-client/src/app/pages/message/message.component.scss
@@ -51,7 +51,7 @@
     }
   }
 
-  h2 {
+  h3 {
     font-size: 24px;
     font-weight: 600;
     color: var(--text-primary);
@@ -62,6 +62,36 @@
     font-size: 16px;
     color: var(--text-secondary);
     margin: 0;
+  }
+}
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  background: var(--background);
+  
+  .loading-spinner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    
+    mat-icon {
+      font-size: 48px;
+      width: 48px;
+      height: 48px;
+      color: var(--primary);
+    }
+    
+    p {
+      font-size: 16px;
+      color: var(--text-secondary);
+      margin: 0;
+      text-align: center;
+    }
   }
 }
 
